Fixed html in ChlkHelper

--- a/Chalkable.Web/App_Code/ChlkHelpers.cshtml
+++ b/Chalkable.Web/App_Code/ChlkHelpers.cshtml
@@ -127,9 +127,10 @@
 {
    <div id="toppanel">
        <div id="panel">
-          <div class="tab">
-             <button id="close" class="toplogin closer">Close</button>		
-          <div class="content clearfix">
+           <div class="tab">
+               <button id="close" class="toplogin closer">Close</button>		
+           </div>
+            <div class="content clearfix">
             <section class="signinarea">
                 <div id="formContainer">
                    <form id="login" action="@Url.Content("~/User/LogOn")" method="post">
