--- a/Chalkable.Web/assets/jade/activities/settings/TeacherSettings.jade
+++ b/Chalkable.Web/assets/jade/activities/settings/TeacherSettings.jade
@@ -40,7 +40,7 @@
         .block
             .header Password
             .fields
-                a#changePasswordLink
+                a#changePasswordLink(href='javascript:')
                     |Reset Password
             div.x-hidden#changePasswordForm
                 +ActionForm('account', 'TeacherChangePassword')#info-edit-form.with-ok
