--- a/Chalkable.Web/App_Code/ChlkHelpers.cshtml
+++ b/Chalkable.Web/App_Code/ChlkHelpers.cshtml
@@ -127,13 +127,13 @@
 {
    <div id="toppanel">
        <div id="panel">
-          <div class="tab">
-             <button id="close" class="toplogin closer">Close</button>		
-          </div>
-          <div class="content clearfix">
+           <div class="tab">
+               <button id="close" class="toplogin closer">Close</button>		
+           </div>
+            <div class="content clearfix">
             <section class="signinarea">
                 <div id="formContainer">
-                   <form id="login" action="@Url.Content("~/Home/LogOn")" method="post">
+                   <form id="login" action="@Url.Content("~/User/LogOn")" method="post">
                    <div class = "sign-in-errors">
                       @Html.ValidationMessage("ValidationError")
                    </div>
