--- a/Chalkable.Web/assets/jade/activities/profile/ChangePassword.jade
+++ b/Chalkable.Web/assets/jade/activities/profile/ChangePassword.jade
@@ -3,11 +3,12 @@
         .title
             .name-block
                 .info-title=Msg.Old_Password
-                input(name="oldPassword", class="validate[required]")
+                input(name="oldPassword", type="password", class="validate[required]")
                 .info-title=Msg.New_Password
-                input(name="newPassword", class="validate[required]")
+                input(name="newPassword", id="newPassword", type="password", class="validate[required]")
                 .info-title=Msg.New_Password_Confirm
-                input(name="newPasswordConfirmation", class="validate[required]")
+                input(name="newPasswordConfirmation", id="newPasswordConfirmation", type="password", class="validate[required, equals[newPassword]]")
+        br
         .section-buttons
             +Button(type="submit").special-button.blue-button#submit-info-button=Msg.Save
             +Button(type="button").special-button.blue-button#cancell-edit-info-button=Msg.Cancel
