fixed some scripts and delete demo school task producing

--- a/Chalkable.Web/Views/Home/Index.cshtml
+++ b/Chalkable.Web/Views/Home/Index.cshtml
@@ -59,7 +59,7 @@
 		<h4 class="try">*Try it free with up to 5 teachers. $10 a student when you love it & want it for everyone.</h4>
 		<h4 class="admins">Admins and teachers get $5 back per student to buy apps from day one.</h4>
 			<div id="floatingbuttons">
-				<a href="@Url.Content("~/DemoSchool/Demo")" class="demo-button" ></a>
+				<a href="@Url.Content("~/DemoSchool/Index")" class="demo-button" ></a>
 				<a href="@Url.Content("~/SignUp/Admin")" class="signup-button" ></a>
 			</div>
 	</div>
@@ -76,7 +76,7 @@
 						<li><a href="#signinanchor" class="scroll"><img src="@Url.StaticContent("/Content/images/common/nav-logo-150.png")" class="navlogo" alt="nav logo"></a></li>
 						<li id="overviewLI" class="active"><a id="nav_section1" href="#first-anchor" class="scroll">What You Get</a></li>
 						<li class="pricingLI"><a id="nav_section_two" href="#second_anchor" class="scroll">What it Costs</a></li>
-                        <li class="demoLI"><a href="@Url.Content("~/DemoSchool/Demo")" >Demo</a></li>
+                        <li class="demoLI"><a href="@Url.Content("~/DemoSchool/Index")" >Demo</a></li>
 					</ul>
 				</div>
 			</div>
