--- a/Chalkable.Web/Views/DemoSchool/Index.cshtml
+++ b/Chalkable.Web/Views/DemoSchool/Index.cshtml
@@ -66,7 +66,7 @@
     </script>
 }
 
-@section Sidebar {
+@*@section Sidebar {
     <h2>App store for school</h2>
     <p><img src="@Url.StaticContent("/Content/images/login/talk.png")" align="left" />   Amazing digital tools and
            content can transform the way students learn in school. The Chalkable app store lists the best education apps from across the web.
@@ -83,7 +83,7 @@
 
 <p>The most powerful tools and most immersive content live on the web. With the Chalkable App store and platform, schools gain access...and that makes for a better learning experience
     </p>
-}
+}*@
 
 @Html.ValidationSummary(true, "Looks like that's an incorrect email and password. If you're having trouble, click 'Forgot Info' below.")
 
