--- a/Chalkable.Web/assets/jade/activities/bgtasks/BgTasks.jade
+++ b/Chalkable.Web/assets/jade/activities/bgtasks/BgTasks.jade
@@ -17,7 +17,7 @@
                     .td=item.getCreated().toString('dd/m/yy hh:min:ss')
                     .td=item.getScheduled().toString('dd/m/yy hh:min:ss')
                     .td=item.getCompleted() ? item.getCompleted().toString('dd/m/yy hh:min:ss') : ""
-                    .td= item.getTaskState().toString()
+                    .td= item.getTaskState().valueOf()
                     .td= item.getTaskType().valueOf()
                     .td.action-links
                         +ActionLink('backgroundtask', 'logsPage', item.getId()).profile
